--- a/index.html
+++ b/index.html
@@ -55,6 +55,16 @@
       </div>
       <button class="see-more">See more</button>
     </div>
+
+    <!-- Footer -->
+    <footer class="footer">
+      <p>
+        This project was coded by
+        <a href="" target="_blank"></a> and is
+        <a href=""> on GitHub</a> and
+        <a href="" target="_blank">hosted on Netlify</a>
+      </p>
+    </footer>
   </div>
 </body>
 
