--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
     <!-- Current weather -->
     <div class="current-weather">
       <div class="location">
-        <h1 id="current-city">Madrid</h1>
-        <p id="current-date">Thursday 09:41</p>
+        <h1 id="current-city"></h1>
+        <p id="current-date"></p>
       </div>
       <div class="temp-icon">
-        <h2 id="current-temperature">31°</h2>
+        <h2 id="current-temperature"></h2>
         <img src="https://cdn-icons-png.flaticon.com/512/869/869869.png" alt="sun icon" />
       </div>
     </div>
@@ -39,22 +39,22 @@
     <!-- Air conditions -->
     <div class="air-conditions">
       <div class="condition">
-        <p>Real Feel</p>
-        <h3>30°</h3>
+        <p>Feels like</p>
+        <h3><span id="feels-like"></span></h3>
       </div>
       <div class="condition">
         <p>Wind</p>
-        <h3>0.2 km/h</h3>
+        <h3><span id="wind-speed"></span></h3>
       </div>
       <div class="condition">
-        <p>Chance of rain</p>
-        <h3>0%</h3>
+        <p>Humidity</p>
+        <h3><span id="humidity"></span></h3>
       </div>
       <div class="condition">
-        <p>UV Index</p>
-        <h3>3</h3>
+        <p>Sky</p>
+        <h3><span id="description"></span></h3>
       </div>
-      <button class="see-more">See more</button>
+
     </div>
 
     <!-- Footer -->
