--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </div>
       <div class="temp-icon">
         <h2 id="current-temperature"></h2>
-        <img src="https://cdn-icons-png.flaticon.com/512/869/869869.png" alt="sun icon" />
+        <div id="icon"></div>
       </div>
     </div>
 
