Added code in HTML

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <div class="location">
         <h1 id="current-city"></h1>
         <p id="current-date"></p>
+        <p id="time"></p>
       </div>
       <div class="temp-icon">
         <h2 id="current-temperature"></h2>
@@ -61,9 +62,9 @@
     <footer class="footer">
       <p>
         This project was coded by
-        <a href="" target="_blank"></a> and is
-        <a href=""> on GitHub</a> and
-        <a href="" target="_blank">hosted on Netlify</a>
+        <a href="https://github.com/marysnajder-ai" target="_blank">Maria Šnajder</a> and is
+        <a href="https://github.com/marysnajder-ai/weather-app-v"> on GitHub</a> and
+        <a href="https://weather-prototype-app-v.netlify.app/" target="_blank">hosted on Netlify</a>
       </p>
     </footer>
   </div>
