updated with forecast function

--- a/index.html
+++ b/index.html
@@ -56,18 +56,22 @@
       </div>
 
     </div>
+    <!-- Daily Forecast -->
+    <div class="forecast-section">
+      <h2> Weekly Forecast</h2>
+      <div class="daily-forecast" id="forecast"></div>
 
-    <!-- Footer -->
-    <footer class="footer">
-      <p>
-        This project was coded by
-        <a href="https://github.com/marysnajder-ai" target="_blank">Maria Šnajder</a> and is
-        <a href="https://github.com/marysnajder-ai/weather-app-v"> on GitHub</a> and
-        <a href="https://weather-prototype-app-v.netlify.app/" target="_blank">hosted on Netlify</a>
-      </p>
-    </footer>
-  </div>
-  <script src="src/app.js"></script>
+      <!-- Footer -->
+      <footer class="footer">
+        <p>
+          This project was coded by
+          <a href="https://github.com/marysnajder-ai" target="_blank">Maria Šnajder</a> and is
+          <a href="https://github.com/marysnajder-ai/weather-app-v"> on GitHub</a> and
+          <a href="https://weather-prototype-app-v.netlify.app/" target="_blank">hosted on Netlify</a>
+        </p>
+      </footer>
+    </div>
+    <script src="src/app.js"></script>
 </body>
 
 </html>
